Bug 1678243 - Clear exception set by JS::FinishIncrementalEncoding. r=tcampbell

Differential Revision: https://phabricator.services.mozilla.com/D98015