dom/script/ScriptLoader.cpp
@@ -3235,6 +3235,11 @@ void ScriptLoader::EncodeRequestBytecode(JSContext* aCx,
 
   JS::RootedScript script(aCx, aRequest->mScript);
   if (!JS::FinishIncrementalEncoding(aCx, script, aRequest->mScriptBytecode)) {
+    // Encoding can be aborted for non-supported syntax (e.g. asm.js), or
+    // any other internal error.
+    // We don't care the error and just give up encoding.
+    JS_ClearPendingException(aCx);
+
     LOG(("ScriptLoadRequest (%p): Cannot serialize bytecode", aRequest));
     return;
   }
@@ -3314,8 +3319,10 @@ void ScriptLoader::GiveUpBytecodeEncoding() {
 
     if (aes.isSome()) {
       JS::RootedScript script(aes->cx(), request->mScript);
-      Unused << JS::FinishIncrementalEncoding(aes->cx(), script,
-                                              request->mScriptBytecode);
+      if (!JS::FinishIncrementalEncoding(aes->cx(), script,
+                                         request->mScriptBytecode)) {
+        JS_ClearPendingException(aes->cx());
+      }
     }
 
     request->mScriptBytecode.clearAndFree();
